# tvparser

./: .gitignore  README.md  pyproject.toml
scripts/: csv2jsona.py  extract_events_windows.py  merge_csv.py  patterns_to_timestamps.py  tvparser-cli.py
src/tvparser/: __init__.py  cli.py  core.py  csv2json.py  extract_patterns.py  extract_slrun.py  io.py  io.pyi  slicer.py  timeutils.py
tests/integration/: test_extract_patterns.py  test_extract_patterns_more.py  test_extract_slrun.py  test_extract_slrun_more.py  test_integration.py
tests/support/: json_helpers.py
tests/unit/: test_cli.py  test_cli_extra.py  test_core.py  test_core_branches.py  test_core_extra.py  test_core_indicators.py  test_csv2json.py  test_io.py  test_io_more_.py  test_slicer.py  test_slicer_more.py  test_timeutils.py  test_timeutils_more.py  test_timeutils_remaining.py  test_timeutils_windows.py
